style.css
.video-class {
  position: relative; 
  width: 75%;
  height: 0; 
  overflow: hidden; 
  padding-bottom: 56.25%; 
}

.video-class iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: none;
}
#page {display: grid; grid-template-columns: auto;}
.navigation {grid-column: 1; grid-row: 1; max-width: 100%; height: auto;}
#content{grid-column: 2; grid-row: 1; display: inline-block; color:sienna; font-style: bold; background-image: url("img/silverslip.jpg"); justify-content: left;}
a {font-style: bold; color:blue; background-color: white;}

